--- a/src/main/res/layout/save_data_in_file.xml
+++ b/src/main/res/layout/save_data_in_file.xml
@@ -11,14 +11,13 @@
         android:layout_gravity="center_horizontal"
         android:hint="Введите имя файла"
         android:layout_marginLeft="10dp"
-        android:maxLength="20"
-        android:maxLines="1"/>
+        android:layout_marginStart="10dp"/>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left|center_horizontal"
+        android:layout_gravity="start|center_horizontal"
         android:layout_marginTop="10dp">
 
         <TextView
